<resources>
    <string name="app_name">Rent</string>
    <string name="title_activity_center">CenterActivity</string>
    <string name="title_home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_account">Don\'t have an account? <b>Sign up.</b></string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="change_photo">change photo</string>
    <string name="not_selected">Не выбрано</string>
    <string name="discription">Discription</string>
    <string name="price">Price</string>
    <string name="city_not_selected">Город не выбран</string>
    <string name="district_not_selected">Район не выбран</string>
    <string name="category_not_selected">Категория не выбрана</string>
    <string name="sub_category_not_selected">Подкатегория не выбрана</string>
</resources>
