<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_image_name"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:civ_border_color="@color/grey"
        app:civ_border_width="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/person"/>
    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter name and password"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image_name"
        android:layout_marginTop="30dp" />
    <EditText
        android:id="@+id/name_register_input"
        android:layout_width="match_parent"
        style="@style/edit_text_input"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/register_title"/>
    <EditText
        android:id="@+id/password_register_input"
        android:layout_width="match_parent"
        style="@style/edit_text_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/name_register_input"/>
    <Button
        android:id="@+id/register_name_btn"
        android:layout_width="match_parent"
        style="@style/btn_style"
        app:layout_constraintTop_toBottomOf="@+id/password_register_input"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:background="@color/orange"/>

</android.support.constraint.ConstraintLayout>